Updated the README and fixed the layout problem with the Order details

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@ body {
 .row {
 	margin-top: 15px;
 }
-h1, h3 {
+h1 {
 	text-align: center;
 }
 h2 {
